# SIMD

./: CMakeLists.txt  README.md  main.c  main.cpp
SIMD/: conv.h  convAVX.cpp  convNeon.cpp  convScalar.cpp  convolution.cpp  convolution.h  kernels.h  scalars.cpp  tests.cpp  tests.h  torchsm.ipynb  vectorAVX.cpp  vectorNeon.cpp  vectorNeon.h
perf/: .clangd  CMakeLists.txt  benchmarks.ipynb  torr.cpp
